# hmr2

./: .gitignore
cxx/correct/: correct.pro
cxx/correct/src/: main.cpp
cxx/dump/: CMakeLists.txt
cxx/dump/src/: hmr_args_type.cpp  hmr_args_type.h  main.cpp
cxx/filter/: CMakeLists.txt  filter.pro
cxx/filter/src/: filter_bam.cpp  filter_bam.h  filter_enzyme.cpp  filter_enzyme.h  filter_fasta.cpp  filter_fasta.h  filter_fasta_type.h  hmr_args_type.cpp  hmr_args_type.h  main.cpp
cxx/optimize/: CMakeLists.txt
cxx/optimize/src/: hmr_args_type.cpp  hmr_args_type.h  magnetic.h  main.cpp  main.cpp.autosave  optimize.cpp  optimize.h  optimize_direction.cpp  optimize_direction.h  optimize_order.cpp  optimize_order.h
cxx/partition/: CMakeLists.txt
cxx/partition/src/: group_conv.cpp  group_conv.h  hmr_args_type.cpp  hmr_args_type.h  main.cpp  partition.cpp  partition.h
cxx/shared/: hmr_args.cpp  hmr_args.h  hmr_args_parser.h  hmr_bam.cpp  hmr_bam.h  hmr_bgzf.cpp  hmr_bgzf.h  hmr_cgd_parse.cpp  hmr_cgd_parse.h  hmr_cgd_type.h  hmr_cluster.cpp  hmr_cluster.h  hmr_fasta.cpp  hmr_fasta.h  hmr_global.h  hmr_polar_parse.cpp  hmr_polar_parse.h  hmr_polar_type.h  hmr_polar_type.h.autosave  hmr_reads_parse.cpp  hmr_reads_parse.h  hmr_thread_pool.h  hmr_tour.cpp  hmr_tour.h  hmr_ui.cpp  hmr_ui.h
mods/correct/: CMakeLists.txt
mods/correct/src/: args_correct.cpp  args_correct.h  contig_correct.cpp  contig_correct.h  contig_correct_type.h  main.cpp  mapping_correct.cpp  mapping_correct.h  mapping_correct_type.h  mismatch_correct.cpp  mismatch_correct.h
mods/draft/: CMakeLists.txt
mods/draft/src/: args_draft.cpp  args_draft.h  fasta_draft.cpp  fasta_draft.h  fasta_draft_type.h  main.cpp  mapping_draft.cpp  mapping_draft.h  mapping_draft_type.h
mods/filter/src/: args_filter.cpp  args_filter.h  filter_enzyme.cpp  filter_enzyme.h  filter_enzyme_type.h  main.cpp
mods/map/src/: args_map.cpp  args_map.h  main.cpp  map_fasta.cpp  map_fasta.h  map_fasta_type.h
mods/partition/src/: allele.cpp  allele.h  args_partition.cpp  args_partition.h  main.cpp  partition.cpp  partition.h  partition_type.h
mods/shared/: hmr_args.cpp  hmr_args.h  hmr_args_types.h  hmr_bam.cpp  hmr_bam.h  hmr_bgzf.cpp  hmr_bgzf.h  hmr_bin_file.cpp  hmr_bin_file.h  hmr_bin_queue.cpp  hmr_contig_graph.cpp  hmr_contig_graph.h  hmr_contig_graph_type.h  hmr_enzyme.cpp  hmr_enzyme.h  hmr_enzyme_type.h  hmr_fasta.cpp  hmr_fasta.h  hmr_fasta_type.h  hmr_fastq.cpp  hmr_fastq.h  hmr_fastq_type.h  hmr_gz.cpp  hmr_gz.h  hmr_mapping.cpp  hmr_mapping.h  hmr_mapping_type.h  hmr_parallel.h  hmr_path.cpp  hmr_path.h  hmr_text_file.cpp  hmr_text_file.h  hmr_thread_pool.h  hmr_ui.cpp
